# extra-codeowners

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .openvex.json  .pre-commit-config.yaml  .readthedocs.yaml  .release-readiness.json  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  mise.toml  mise.tutorial.toml  mkdocs.yml  pyproject.toml  renovate.json  requirements-build.txt
.compliance/: README.md  container-policy.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: build_python_artifacts.py  build_python_distribution_spine.py  build_release_spine.py  container_evidence.py  container_source_plan.py  fetch_verified_sources.py  github_release_api.py  immutable_release_preflight.py  python_distribution_spine.py  release_asset_assembler.py  release_controller.py  release_readiness.py  release_spine.py  run_evidence_parser.py  smoke-container.sh  test-postgres-backup-restore.sh  validate-openvex.jq  verified_source_store.py  verify-container-runtime.py
.github/workflows/: ci.yml  codeql.yml  coverage-pages.yml  dco.yml  dependency-audit.yml  dependency-review.yml  property-tests.yml  python-distribution.yml  release.yml  scorecard.yml  workflow-security.yml
charts/extra-codeowners/: Chart.yaml  LICENSE  README.md  values.schema.json  values.yaml
docs/: index.md
docs/explanation/: architecture.md  container-distribution-evidence.md  database-migrations.md  native-codeowners.md  property-testing.md  runtime-base.md  threat-model.md
extra_codeowners/: __init__.py  __main__.py  app.py  build_identity.py  cli.py  codeowners.py  database.py  dco.py  evaluator.py  github.py  logging.py  manifest.py  metrics.py  migrations.py  models.py  policy.py  service.py  settings.py  webhooks.py
tests/: conftest.py  release_spine_fixtures.py  test_app.py  test_build_identity.py  test_cli.py  test_codeowners.py  test_container_evidence.py  test_container_security.py  test_container_source_plan.py  test_database.py  test_dco.py  test_documentation_examples.py  test_evaluation_beta.py  test_evaluator.py  test_fetch_verified_sources.py  test_github.py  test_github_release_api.py  test_immutable_release_preflight.py  test_live_github_contract.py  test_live_github_lifecycle_contract.py  test_manifest.py  test_migrations.py  test_models.py  test_policy.py  test_postgres.py  test_python_build_artifacts.py  test_python_distribution_spine.py  test_release_asset_assembler.py  test_release_controller.py  test_release_spine.py  test_run_evidence_parser.py  test_security_properties.py  test_security_workflow_policy.py  test_service.py  test_settings.py  test_toolchain_configuration.py  test_verified_source_store.py  test_webhooks.py
tools/: __init__.py  capture_github_lifecycle_contract.py  evaluation_beta.py  evaluation_beta_bootstrap.py  live_github_contract.py
(+77 files in other folders)
